--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 
 html,
 body {
-  font-family: 'Lato', sans-serif;
+  font-family: 'Roboto', sans-serif;
   height: 100%;
   margin: 0;
   padding: 0;
@@ -19,7 +19,10 @@ h1 {
   margin: 0 0 10px 0;
   text-align: center;
 }
-
+#hide-listings,
+#show-listings {
+  width: 48%;
+}
 hr {
   background: #D0D7D9;
   height: 1px;
@@ -29,8 +32,10 @@ hr {
 
 #map {
   bottom: 0px;
+  top: 65px;
   height: 100%;
-  left: 362px;
+  left: 290px;
+  width: 100%;
   position: absolute;
   right: 0px;
 }
@@ -44,5 +49,6 @@ hr {
   line-height: 35px;
   padding: 10px 10px 30px 10px;
   text-align: left;
-  width: 340px;
+  /*width: 300px;*/
+  width: 100%;
 }
