--- a/css/style.css
+++ b/css/style.css
@@ -18,14 +18,11 @@ h1 {
   margin: 0 0 10px 0;
   text-align: center;
 }
-#hide-listings,
-#show-listings {
-  width: 48%;
-}
+
 hr {
   background: #D0D7D9;
-  height: 1px;
-  margin: 20px 0 20px 0;
+  height: 0.5px;
+  margin: 20px 0 20px 0;*/
   border: none;
 }
 
@@ -33,14 +30,14 @@ hr {
   bottom: 0px;
   top: 65px;
   height: 100%;
-  left: 290px;
+  left: 300px;
   width: 100%;
   position: absolute;
   right: 0px;
 }
 
 
-.options-box {
+#options-box {
   background: #fff;
   border: 1px solid #999;
   border-radius: 3px;
