--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,18 @@ hr {
   /*width: 100%;*/
 }
 
+.place-name{
+  font-size: 17px;
+  font-weight: bold;
+  color: rgb(60, 132, 198);
+}
+
 img {
   border-radius: 4px;
+}
+
+li {
+  margin: 0;
+  margin-top: 8px;
+  padding: 8px;
 }
