--- a/css/style.css
+++ b/css/style.css
@@ -2,13 +2,11 @@ html,
 body {
   font-family: 'Roboto', sans-serif;
   height: 100%;
+  width: 100%;
   margin: 0;
   padding: 0;
 }
-/*.container {
-  height: 100%;
-  position: relative;
-}*/
+
 input {
   font-size: 12px;
 }
@@ -30,23 +28,23 @@ hr {
   bottom: 0px;
   top: 65px;
   height: 100%;
-  left: 300px;
   width: 100%;
+  margin: 0;
+  padding: 0;
   position: absolute;
+  left: 340px;
   right: 0px;
 }
 
 
 #options-box {
   background: #fff;
-  border: 1px solid #999;
-  border-radius: 3px;
   height: 100%;
   line-height: 35px;
   padding: 10px 10px 30px 10px;
   text-align: left;
   width: 300px;
-  /*width: 100%;*/
+  width: 100%;
 }
 
 .venue-name {
