Add collapsible sidenav for mobile, improve responsiveness

--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,21 @@
 html,
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   height: 100%;
   width: 100%;
   margin: 0;
   padding: 0;
+}
+
+
+header, main, footer {
+  padding-left: 300px;
+}
+
+@media only screen and (max-width : 992px) {
+  header, main, footer {
+    padding-left: 0;
+  }
 }
 
 input {
@@ -32,16 +43,14 @@ hr {
   margin: 0;
   padding: 0;
   position: absolute;
-  left: 340px;
-  right: 0px;
 }
-
 
 #options-box {
   background: #fff;
   height: 100%;
   line-height: 35px;
-  padding: 10px 10px 30px 10px;
+  padding: 10px 10px 20px 10px;
+  margin: 5px;
   text-align: left;
   width: 300px;
   width: 100%;
